homepage: fix ugly button spacing, change the bragging

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -7,4 +7,6 @@
     border-radius: 40px;
 }
 
-
+.actions {
+    gap: 10px;
+}
